clusters/staging/tekton-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: adminauth@file
spec:
  rules:
    - host: tekton.staging.krony.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: tekton-dashboard
              servicePort: http
